k8s/demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dilek-feneri-demo
  namespace: dilek-feneri-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dilek-feneri-demo
  template:
    metadata:
      labels:
        app: dilek-feneri-demo
    spec:
      imagePullSecrets:
        - name: ghcr-secret
      containers:
        - name: app
          image: ghcr.io/ayavuzer/dilek-kumbarasi:demo-v0.1.12
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - mountPath: /app/uploads
              name: dilek-storage
              subPath: uploads
            - mountPath: /app/data
              name: dilek-storage
              subPath: data
      volumes:
        - name: dilek-storage
          persistentVolumeClaim:
            claimName: dilek-feneri-demo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: dilek-feneri-demo
  namespace: dilek-feneri-demo
spec:
  selector:
    app: dilek-feneri-demo
  ports:
    - name: http
      port: 80
      targetPort: 3000
